cabal-version:   2.4
name:            tagged-identity
version:         0.1.5
license:         BSD-3-Clause
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==9.10.3 ghc ==9.12.4 ghc ==9.14.1
homepage:        https://github.com/mrkkrp/tagged-identity
bug-reports:     https://github.com/mrkkrp/tagged-identity/issues
synopsis:        Trivial monad transformer for tagging monadic stacks.
description:
    The library provides a monad transformer that works just like
    IdentityT, but can be tagged at the type level. This allows us to work
    with monad stacks as usual, except we can make two identical monad stacks
    to have different types. The main application for this is, of course, the
    ability to have different instances for otherwise identical stacks
    without having to do newtype wrapping.

category:        Control
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/tagged-identity.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Control.Monad.Trans.Identity.Tagged
    default-language: GHC2021
    build-depends:
        base >=4.15 && <5,
        mtl >=2 && <3,
        transformers >=0.4 && <0.7

    if flag(dev)
        ghc-options:
            -Wall -Werror -Wredundant-constraints -Wpartial-fields
            -Wunused-packages

    else
        ghc-options: -O2 -Wall
